# fit-check-api

./: .gitignore  README.md  app.py  main.py  products.parquet  pyproject.toml
src/: config.py  test_flow.py  test_retriever.py
src/dao/: example_dao.py
src/ebay/: ebay_client.py
src/example/: example_flow.py
src/flows/alpha_vantage/: alpha_vantage_client.py  alpha_vantage_flow.py
src/test/: test_flow.py
src/utils/: emailer.py  scraper_utils.py
testing/: test.ipynb
