[project]
name = "fit-check-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dotenv>=0.9.9",
    "ipykernel>=7.1.0",
    "polars>=1.37.1",
    "requests>=2.32.5",
    "streamlit>=1.53.0",
]

[tool.uv]
package = true
